--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "The FAR-EDGE open API for analytics.",
   "author": "Athens Information Technology <info@ait.gr>",
   "version": "1.0.0",
-  "license": "Apache License v2.0",
+  "license": "Apache-2.0",
   "main": "server.js",
   "engines": {
     "node": ">=10.1.0",
@@ -36,8 +36,8 @@
     "joi": "^13.2.0",
     "kafka-node": "^2.6.1",
     "moment": "^2.18.1",
-    "mongoose": "^5.0.17",
-    "morgan": "^1.9.0",
+    "mongoose": "^5.7.0",
+    "morgan": "^1.9.1",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "uuid": "^3.2.1",
@@ -59,7 +59,7 @@
     "mocha": "^5.1.1",
     "nock": "^9.3.2",
     "nodemon": "^1.11.0",
-    "nyc": "^11.4.1",
+    "nyc": "^14.1.1",
     "sinon": "^6.0.0"
   },
   "nyc": {
